[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unityvr"
version = "0.1.0"
description = "Tools for analyzing data from Unity-based virtual reality."
authors = [
    {name = "hjmh", email = "hjmhaberkern@gmail.com"}
    ]
license = "MIT"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "xarray",
    "seaborn",
    "scikit-image",
    "statsmodels",
]
